@@ -2,6 +2,7 @@ package com.revature.service;
 
 import java.sql.Timestamp;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import com.revature.dao.IReimbursementDao;
 import com.revature.dao.ReimbursementDao;
@@ -75,14 +76,14 @@ public class ReimbursementService {
 	public List<Reimbursement> getReimbursementsByAuthor(int authorId) {
 		List<Reimbursement> result = rdao.findAll().stream()
 				.filter(r -> r.getReimbAuthor() == authorId)
-				.toList();
+				.collect(Collectors.toList());
 		return result;
 	}
 	
 	public List<Reimbursement> getResolved() {
 		List<Reimbursement> result = rdao.findAll().stream()
 				.filter(r -> r.getReimbResolved() != null)
-				.toList();
+				.collect(Collectors.toList());
 		return result;
 	}
 }
